// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSmsTemplate component Client-side validation triggers 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row nhsuk-grid-column-two-thirds"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#smsTemplateName"
            >
              Enter a template name
            </a>
          </li>
          <li>
            <a
              href="#smsTemplateMessage"
            >
              Enter a template message
            </a>
          </li>
        </ul>
      </div>
      <h1
        data-testid="page-heading"
      >
        Edit text message template
      </h1>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-sms-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-8 nhsuk-form-group--error"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="smsTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template-details"
            >
              <summary
                class="nhsuk-details__summary"
                data-testid="how-to-name-your-template-summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
                data-testid="how-to-name-your-template-text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'SMS - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="smsTemplateName--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Enter a template name
              </span>
              <input
                aria-describedby="smsTemplateName--error-message"
                autocomplete="off"
                class="nhsuk-input nhsuk-input--error"
                id="smsTemplateName"
                name="smsTemplateName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-6"
          >
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="smsTemplateMessage"
                id="smsTemplateMessage--label"
              >
                Message
              </label>
              <span
                class="nhsuk-error-message"
                id="smsTemplateMessage--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Enter a template message
              </span>
              <textarea
                aria-describedby="smsTemplateMessage--error-message"
                autocomplete="off"
                class="nhsuk-textarea nhsuk-textarea--error"
                id="smsTemplateMessage"
                maxlength="918"
                name="smsTemplateMessage"
                rows="12"
              />
            </div>
            <div
              class=""
            >
              <p
                data-testid="character-message-count-0"
              >
                0 characters
                <br />
                This template will be charged as 0 text messages.
                <br />
                If you're using personalisation fields, it could be charged as more.
              </p>
              <p
                data-testid="sms-pricing-info-0"
              >
                <a
                  href="/pricing/text-messages"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about character counts and text messaging pricing (opens in a new tab)
                </a>
              </p>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="create-sms-template-submit-button"
            type="submit"
          >
            Save and preview
          </button>
        </form>
      </div>
      <aside
        class="nhsuk-grid-column-one-third"
      >
        <h2
          class="nhsuk-heading-m"
          data-testid="personalisation-header"
        >
          Personalisation
        </h2>
        <p>
          Use double brackets to add a personalisation field to your content.
        </p>
        <p>
          Do not include spaces in your personalisation fields. For example:
        </p>
        <span
          class="nhsuk-u-visually-hidden"
          id="personalisation-markdown-description"
        >
          An example of personalised message content:
        </span>
        <pre
          class="nhsuk-code-block"
        >
          <code
            aria-describedby="personalisation-markdown-description"
          >
            Hello ((firstName)), your NHS number is ((nhsNumber))
          </code>
        </pre>
        <details
          class="nhsuk-details"
          data-testid="pds-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="pds-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              PDS personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="pds-personalisation-fields-text"
          >
            <p>
              NHS Notify gets data from PDS to populate certain personalisation fields.
            </p>
            <p>
              You can use the following PDS personalisation fields:
            </p>
            <ul>
              <li>
                ((fullName))
              </li>
              <li>
                ((firstName))
              </li>
              <li>
                ((lastName))
              </li>
              <li>
                ((nhsNumber))
              </li>
            </ul>
            <p>
              Make sure your personalisation fields exactly match the PDS personalisation fields. This includes using the correct order of upper and lower case letters.
            </p>
          </div>
        </details>
        <details
          class="nhsuk-details"
          data-testid="custom-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="custom-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Custom personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="custom-personalisation-fields-text"
          >
            <p>
              You can add 
              <a
                href="/using-nhs-notify/personalisation#custom-personalisation-fields"
                rel="noopener noreferrer"
                target="_blank"
              >
                custom personalisation fields
              </a>
               that use your own personalisation data.
            </p>
            <p>
              Include custom personalisation fields in your content. Then provide your custom personalisation data using 
              <a
                href="/using-nhs-notify/api"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify API
              </a>
               or 
              <a
                href="/using-nhs-notify/mesh"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify MESH
              </a>
              .
            </p>
            <p>
              For example, if you wanted to include GP surgery as custom personalisation data, your custom personalisation field could be:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="custom-personalisation-markdown-description"
            >
              An example of personalised message content:
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="custom-personalisation-markdown-description"
              >
                ((GP_surgery))
              </code>
            </pre>
            <p>
              Remember not to include spaces in your personalisation fields.
            </p>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m nhsuk-u-margin-top-4"
          data-testid="message-formatting-header"
        >
          Message formatting
        </h2>
        <details
          class="nhsuk-details"
          data-testid="links-and-urls-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="links-and-urls-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Links and URLs
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="links-and-urls-text"
          >
            <p>
              Write the URL in full, starting with https://
            </p>
            <p>
              For example:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="links-urls-markdown-description"
            >
              An example of URL markdown
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="links-urls-markdown-description"
              >
                https://www.nhs.uk/example
              </code>
            </pre>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m"
        >
          More about text messages
        </h2>
        <ul
          class="channel-guidance__list"
        >
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/pricing/text-messages"
              rel="noopener noreferrer"
              target="_blank"
            >
              Text message length and pricing (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/tell-recipients-who-your-messages-are-from"
              rel="noopener noreferrer"
              target="_blank"
            >
              Sender IDs (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/delivery-times"
              rel="noopener noreferrer"
              target="_blank"
            >
              Delivery times (opens in a new tab)
            </a>
          </li>
        </ul>
      </aside>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateSmsTemplate component renders page one error 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row nhsuk-grid-column-two-thirds"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#smsTemplateName"
            >
              Template name error
            </a>
          </li>
        </ul>
      </div>
      <h1
        data-testid="page-heading"
      >
        Edit text message template
      </h1>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-sms-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-8 nhsuk-form-group--error"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="smsTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template-details"
            >
              <summary
                class="nhsuk-details__summary"
                data-testid="how-to-name-your-template-summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
                data-testid="how-to-name-your-template-text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'SMS - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="smsTemplateName--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Template name error
              </span>
              <input
                aria-describedby="smsTemplateName--error-message"
                autocomplete="off"
                class="nhsuk-input nhsuk-input--error"
                id="smsTemplateName"
                name="smsTemplateName"
                type="text"
                value="template-name"
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-6"
          >
            <div
              class="nhsuk-form-group"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="smsTemplateMessage"
                id="smsTemplateMessage--label"
              >
                Message
              </label>
              <textarea
                autocomplete="off"
                class="nhsuk-textarea"
                id="smsTemplateMessage"
                maxlength="918"
                name="smsTemplateMessage"
                rows="12"
              >
                template-message
              </textarea>
            </div>
            <div
              class=""
            >
              <p
                data-testid="character-message-count-0"
              >
                16 characters
                <br />
                This template will be charged as 1 text message.
                <br />
                If you're using personalisation fields, it could be charged as more.
              </p>
              <p
                data-testid="sms-pricing-info-0"
              >
                <a
                  href="/pricing/text-messages"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about character counts and text messaging pricing (opens in a new tab)
                </a>
              </p>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="create-sms-template-submit-button"
            type="submit"
          >
            Save and preview
          </button>
        </form>
      </div>
      <aside
        class="nhsuk-grid-column-one-third"
      >
        <h2
          class="nhsuk-heading-m"
          data-testid="personalisation-header"
        >
          Personalisation
        </h2>
        <p>
          Use double brackets to add a personalisation field to your content.
        </p>
        <p>
          Do not include spaces in your personalisation fields. For example:
        </p>
        <span
          class="nhsuk-u-visually-hidden"
          id="personalisation-markdown-description"
        >
          An example of personalised message content:
        </span>
        <pre
          class="nhsuk-code-block"
        >
          <code
            aria-describedby="personalisation-markdown-description"
          >
            Hello ((firstName)), your NHS number is ((nhsNumber))
          </code>
        </pre>
        <details
          class="nhsuk-details"
          data-testid="pds-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="pds-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              PDS personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="pds-personalisation-fields-text"
          >
            <p>
              NHS Notify gets data from PDS to populate certain personalisation fields.
            </p>
            <p>
              You can use the following PDS personalisation fields:
            </p>
            <ul>
              <li>
                ((fullName))
              </li>
              <li>
                ((firstName))
              </li>
              <li>
                ((lastName))
              </li>
              <li>
                ((nhsNumber))
              </li>
            </ul>
            <p>
              Make sure your personalisation fields exactly match the PDS personalisation fields. This includes using the correct order of upper and lower case letters.
            </p>
          </div>
        </details>
        <details
          class="nhsuk-details"
          data-testid="custom-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="custom-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Custom personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="custom-personalisation-fields-text"
          >
            <p>
              You can add 
              <a
                href="/using-nhs-notify/personalisation#custom-personalisation-fields"
                rel="noopener noreferrer"
                target="_blank"
              >
                custom personalisation fields
              </a>
               that use your own personalisation data.
            </p>
            <p>
              Include custom personalisation fields in your content. Then provide your custom personalisation data using 
              <a
                href="/using-nhs-notify/api"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify API
              </a>
               or 
              <a
                href="/using-nhs-notify/mesh"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify MESH
              </a>
              .
            </p>
            <p>
              For example, if you wanted to include GP surgery as custom personalisation data, your custom personalisation field could be:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="custom-personalisation-markdown-description"
            >
              An example of personalised message content:
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="custom-personalisation-markdown-description"
              >
                ((GP_surgery))
              </code>
            </pre>
            <p>
              Remember not to include spaces in your personalisation fields.
            </p>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m nhsuk-u-margin-top-4"
          data-testid="message-formatting-header"
        >
          Message formatting
        </h2>
        <details
          class="nhsuk-details"
          data-testid="links-and-urls-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="links-and-urls-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Links and URLs
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="links-and-urls-text"
          >
            <p>
              Write the URL in full, starting with https://
            </p>
            <p>
              For example:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="links-urls-markdown-description"
            >
              An example of URL markdown
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="links-urls-markdown-description"
              >
                https://www.nhs.uk/example
              </code>
            </pre>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m"
        >
          More about text messages
        </h2>
        <ul
          class="channel-guidance__list"
        >
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/pricing/text-messages"
              rel="noopener noreferrer"
              target="_blank"
            >
              Text message length and pricing (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/tell-recipients-who-your-messages-are-from"
              rel="noopener noreferrer"
              target="_blank"
            >
              Sender IDs (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/delivery-times"
              rel="noopener noreferrer"
              target="_blank"
            >
              Delivery times (opens in a new tab)
            </a>
          </li>
        </ul>
      </aside>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateSmsTemplate component renders page with back link if initial state has no id - edit mode 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    href="/choose-a-template-type"
  >
    Back to choose a template type
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row nhsuk-grid-column-two-thirds"
    >
      <h1
        data-testid="page-heading"
      >
        Create text message template
      </h1>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-sms-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-8"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="smsTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template-details"
            >
              <summary
                class="nhsuk-details__summary"
                data-testid="how-to-name-your-template-summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
                data-testid="how-to-name-your-template-text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'SMS - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group"
            >
              <input
                autocomplete="off"
                class="nhsuk-input"
                id="smsTemplateName"
                name="smsTemplateName"
                type="text"
                value="template-name"
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-6"
          >
            <div
              class="nhsuk-form-group"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="smsTemplateMessage"
                id="smsTemplateMessage--label"
              >
                Message
              </label>
              <textarea
                autocomplete="off"
                class="nhsuk-textarea"
                id="smsTemplateMessage"
                maxlength="918"
                name="smsTemplateMessage"
                rows="12"
              >
                template-message
              </textarea>
            </div>
            <div
              class=""
            >
              <p
                data-testid="character-message-count-0"
              >
                16 characters
                <br />
                This template will be charged as 1 text message.
                <br />
                If you're using personalisation fields, it could be charged as more.
              </p>
              <p
                data-testid="sms-pricing-info-0"
              >
                <a
                  href="/pricing/text-messages"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about character counts and text messaging pricing (opens in a new tab)
                </a>
              </p>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="create-sms-template-submit-button"
            type="submit"
          >
            Save and preview
          </button>
        </form>
      </div>
      <aside
        class="nhsuk-grid-column-one-third"
      >
        <h2
          class="nhsuk-heading-m"
          data-testid="personalisation-header"
        >
          Personalisation
        </h2>
        <p>
          Use double brackets to add a personalisation field to your content.
        </p>
        <p>
          Do not include spaces in your personalisation fields. For example:
        </p>
        <span
          class="nhsuk-u-visually-hidden"
          id="personalisation-markdown-description"
        >
          An example of personalised message content:
        </span>
        <pre
          class="nhsuk-code-block"
        >
          <code
            aria-describedby="personalisation-markdown-description"
          >
            Hello ((firstName)), your NHS number is ((nhsNumber))
          </code>
        </pre>
        <details
          class="nhsuk-details"
          data-testid="pds-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="pds-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              PDS personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="pds-personalisation-fields-text"
          >
            <p>
              NHS Notify gets data from PDS to populate certain personalisation fields.
            </p>
            <p>
              You can use the following PDS personalisation fields:
            </p>
            <ul>
              <li>
                ((fullName))
              </li>
              <li>
                ((firstName))
              </li>
              <li>
                ((lastName))
              </li>
              <li>
                ((nhsNumber))
              </li>
            </ul>
            <p>
              Make sure your personalisation fields exactly match the PDS personalisation fields. This includes using the correct order of upper and lower case letters.
            </p>
          </div>
        </details>
        <details
          class="nhsuk-details"
          data-testid="custom-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="custom-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Custom personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="custom-personalisation-fields-text"
          >
            <p>
              You can add 
              <a
                href="/using-nhs-notify/personalisation#custom-personalisation-fields"
                rel="noopener noreferrer"
                target="_blank"
              >
                custom personalisation fields
              </a>
               that use your own personalisation data.
            </p>
            <p>
              Include custom personalisation fields in your content. Then provide your custom personalisation data using 
              <a
                href="/using-nhs-notify/api"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify API
              </a>
               or 
              <a
                href="/using-nhs-notify/mesh"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify MESH
              </a>
              .
            </p>
            <p>
              For example, if you wanted to include GP surgery as custom personalisation data, your custom personalisation field could be:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="custom-personalisation-markdown-description"
            >
              An example of personalised message content:
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="custom-personalisation-markdown-description"
              >
                ((GP_surgery))
              </code>
            </pre>
            <p>
              Remember not to include spaces in your personalisation fields.
            </p>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m nhsuk-u-margin-top-4"
          data-testid="message-formatting-header"
        >
          Message formatting
        </h2>
        <details
          class="nhsuk-details"
          data-testid="links-and-urls-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="links-and-urls-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Links and URLs
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="links-and-urls-text"
          >
            <p>
              Write the URL in full, starting with https://
            </p>
            <p>
              For example:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="links-urls-markdown-description"
            >
              An example of URL markdown
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="links-urls-markdown-description"
              >
                https://www.nhs.uk/example
              </code>
            </pre>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m"
        >
          More about text messages
        </h2>
        <ul
          class="channel-guidance__list"
        >
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/pricing/text-messages"
              rel="noopener noreferrer"
              target="_blank"
            >
              Text message length and pricing (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/tell-recipients-who-your-messages-are-from"
              rel="noopener noreferrer"
              target="_blank"
            >
              Sender IDs (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/delivery-times"
              rel="noopener noreferrer"
              target="_blank"
            >
              Delivery times (opens in a new tab)
            </a>
          </li>
        </ul>
      </aside>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateSmsTemplate component renders page with multiple errors 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row nhsuk-grid-column-two-thirds"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#smsTemplateName"
            >
              Template name error
            </a>
          </li>
          <li>
            <a
              href="#smsTemplateMessage"
            >
              Template message error
            </a>
          </li>
        </ul>
      </div>
      <h1
        data-testid="page-heading"
      >
        Edit text message template
      </h1>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-sms-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-8 nhsuk-form-group--error"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="smsTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template-details"
            >
              <summary
                class="nhsuk-details__summary"
                data-testid="how-to-name-your-template-summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
                data-testid="how-to-name-your-template-text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'SMS - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="smsTemplateName--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Template name error
              </span>
              <input
                aria-describedby="smsTemplateName--error-message"
                autocomplete="off"
                class="nhsuk-input nhsuk-input--error"
                id="smsTemplateName"
                name="smsTemplateName"
                type="text"
                value="template-name"
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-6"
          >
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="smsTemplateMessage"
                id="smsTemplateMessage--label"
              >
                Message
              </label>
              <span
                class="nhsuk-error-message"
                id="smsTemplateMessage--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Template message error
              </span>
              <textarea
                aria-describedby="smsTemplateMessage--error-message"
                autocomplete="off"
                class="nhsuk-textarea nhsuk-textarea--error"
                id="smsTemplateMessage"
                maxlength="918"
                name="smsTemplateMessage"
                rows="12"
              >
                template-message
              </textarea>
            </div>
            <div
              class=""
            >
              <p
                data-testid="character-message-count-0"
              >
                16 characters
                <br />
                This template will be charged as 1 text message.
                <br />
                If you're using personalisation fields, it could be charged as more.
              </p>
              <p
                data-testid="sms-pricing-info-0"
              >
                <a
                  href="/pricing/text-messages"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about character counts and text messaging pricing (opens in a new tab)
                </a>
              </p>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="create-sms-template-submit-button"
            type="submit"
          >
            Save and preview
          </button>
        </form>
      </div>
      <aside
        class="nhsuk-grid-column-one-third"
      >
        <h2
          class="nhsuk-heading-m"
          data-testid="personalisation-header"
        >
          Personalisation
        </h2>
        <p>
          Use double brackets to add a personalisation field to your content.
        </p>
        <p>
          Do not include spaces in your personalisation fields. For example:
        </p>
        <span
          class="nhsuk-u-visually-hidden"
          id="personalisation-markdown-description"
        >
          An example of personalised message content:
        </span>
        <pre
          class="nhsuk-code-block"
        >
          <code
            aria-describedby="personalisation-markdown-description"
          >
            Hello ((firstName)), your NHS number is ((nhsNumber))
          </code>
        </pre>
        <details
          class="nhsuk-details"
          data-testid="pds-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="pds-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              PDS personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="pds-personalisation-fields-text"
          >
            <p>
              NHS Notify gets data from PDS to populate certain personalisation fields.
            </p>
            <p>
              You can use the following PDS personalisation fields:
            </p>
            <ul>
              <li>
                ((fullName))
              </li>
              <li>
                ((firstName))
              </li>
              <li>
                ((lastName))
              </li>
              <li>
                ((nhsNumber))
              </li>
            </ul>
            <p>
              Make sure your personalisation fields exactly match the PDS personalisation fields. This includes using the correct order of upper and lower case letters.
            </p>
          </div>
        </details>
        <details
          class="nhsuk-details"
          data-testid="custom-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="custom-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Custom personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="custom-personalisation-fields-text"
          >
            <p>
              You can add 
              <a
                href="/using-nhs-notify/personalisation#custom-personalisation-fields"
                rel="noopener noreferrer"
                target="_blank"
              >
                custom personalisation fields
              </a>
               that use your own personalisation data.
            </p>
            <p>
              Include custom personalisation fields in your content. Then provide your custom personalisation data using 
              <a
                href="/using-nhs-notify/api"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify API
              </a>
               or 
              <a
                href="/using-nhs-notify/mesh"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify MESH
              </a>
              .
            </p>
            <p>
              For example, if you wanted to include GP surgery as custom personalisation data, your custom personalisation field could be:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="custom-personalisation-markdown-description"
            >
              An example of personalised message content:
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="custom-personalisation-markdown-description"
              >
                ((GP_surgery))
              </code>
            </pre>
            <p>
              Remember not to include spaces in your personalisation fields.
            </p>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m nhsuk-u-margin-top-4"
          data-testid="message-formatting-header"
        >
          Message formatting
        </h2>
        <details
          class="nhsuk-details"
          data-testid="links-and-urls-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="links-and-urls-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Links and URLs
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="links-and-urls-text"
          >
            <p>
              Write the URL in full, starting with https://
            </p>
            <p>
              For example:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="links-urls-markdown-description"
            >
              An example of URL markdown
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="links-urls-markdown-description"
              >
                https://www.nhs.uk/example
              </code>
            </pre>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m"
        >
          More about text messages
        </h2>
        <ul
          class="channel-guidance__list"
        >
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/pricing/text-messages"
              rel="noopener noreferrer"
              target="_blank"
            >
              Text message length and pricing (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/tell-recipients-who-your-messages-are-from"
              rel="noopener noreferrer"
              target="_blank"
            >
              Sender IDs (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/delivery-times"
              rel="noopener noreferrer"
              target="_blank"
            >
              Delivery times (opens in a new tab)
            </a>
          </li>
        </ul>
      </aside>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CreateSmsTemplate component renders page with no back link if initial state has id 1`] = `
<DocumentFragment>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row nhsuk-grid-column-two-thirds"
    >
      <h1
        data-testid="page-heading"
      >
        Edit text message template
      </h1>
    </div>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-sms-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-8"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="smsTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template-details"
            >
              <summary
                class="nhsuk-details__summary"
                data-testid="how-to-name-your-template-summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
                data-testid="how-to-name-your-template-text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'SMS - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group"
            >
              <input
                autocomplete="off"
                class="nhsuk-input"
                id="smsTemplateName"
                name="smsTemplateName"
                type="text"
                value="template-name"
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group nhsuk-u-margin-bottom-6"
          >
            <div
              class="nhsuk-form-group"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="smsTemplateMessage"
                id="smsTemplateMessage--label"
              >
                Message
              </label>
              <textarea
                autocomplete="off"
                class="nhsuk-textarea"
                id="smsTemplateMessage"
                maxlength="918"
                name="smsTemplateMessage"
                rows="12"
              >
                template-message
              </textarea>
            </div>
            <div
              class=""
            >
              <p
                data-testid="character-message-count-0"
              >
                16 characters
                <br />
                This template will be charged as 1 text message.
                <br />
                If you're using personalisation fields, it could be charged as more.
              </p>
              <p
                data-testid="sms-pricing-info-0"
              >
                <a
                  href="/pricing/text-messages"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about character counts and text messaging pricing (opens in a new tab)
                </a>
              </p>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="create-sms-template-submit-button"
            type="submit"
          >
            Save and preview
          </button>
        </form>
      </div>
      <aside
        class="nhsuk-grid-column-one-third"
      >
        <h2
          class="nhsuk-heading-m"
          data-testid="personalisation-header"
        >
          Personalisation
        </h2>
        <p>
          Use double brackets to add a personalisation field to your content.
        </p>
        <p>
          Do not include spaces in your personalisation fields. For example:
        </p>
        <span
          class="nhsuk-u-visually-hidden"
          id="personalisation-markdown-description"
        >
          An example of personalised message content:
        </span>
        <pre
          class="nhsuk-code-block"
        >
          <code
            aria-describedby="personalisation-markdown-description"
          >
            Hello ((firstName)), your NHS number is ((nhsNumber))
          </code>
        </pre>
        <details
          class="nhsuk-details"
          data-testid="pds-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="pds-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              PDS personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="pds-personalisation-fields-text"
          >
            <p>
              NHS Notify gets data from PDS to populate certain personalisation fields.
            </p>
            <p>
              You can use the following PDS personalisation fields:
            </p>
            <ul>
              <li>
                ((fullName))
              </li>
              <li>
                ((firstName))
              </li>
              <li>
                ((lastName))
              </li>
              <li>
                ((nhsNumber))
              </li>
            </ul>
            <p>
              Make sure your personalisation fields exactly match the PDS personalisation fields. This includes using the correct order of upper and lower case letters.
            </p>
          </div>
        </details>
        <details
          class="nhsuk-details"
          data-testid="custom-personalisation-fields-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="custom-personalisation-fields-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Custom personalisation fields
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="custom-personalisation-fields-text"
          >
            <p>
              You can add 
              <a
                href="/using-nhs-notify/personalisation#custom-personalisation-fields"
                rel="noopener noreferrer"
                target="_blank"
              >
                custom personalisation fields
              </a>
               that use your own personalisation data.
            </p>
            <p>
              Include custom personalisation fields in your content. Then provide your custom personalisation data using 
              <a
                href="/using-nhs-notify/api"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify API
              </a>
               or 
              <a
                href="/using-nhs-notify/mesh"
                rel="noopener noreferrer"
                target="_blank"
              >
                NHS Notify MESH
              </a>
              .
            </p>
            <p>
              For example, if you wanted to include GP surgery as custom personalisation data, your custom personalisation field could be:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="custom-personalisation-markdown-description"
            >
              An example of personalised message content:
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="custom-personalisation-markdown-description"
              >
                ((GP_surgery))
              </code>
            </pre>
            <p>
              Remember not to include spaces in your personalisation fields.
            </p>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m nhsuk-u-margin-top-4"
          data-testid="message-formatting-header"
        >
          Message formatting
        </h2>
        <details
          class="nhsuk-details"
          data-testid="links-and-urls-details"
        >
          <summary
            class="nhsuk-details__summary"
            data-testid="links-and-urls-summary"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              Links and URLs
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            data-testid="links-and-urls-text"
          >
            <p>
              Write the URL in full, starting with https://
            </p>
            <p>
              For example:
            </p>
            <span
              class="nhsuk-u-visually-hidden"
              id="links-urls-markdown-description"
            >
              An example of URL markdown
            </span>
            <pre
              class="nhsuk-code-block"
            >
              <code
                aria-describedby="links-urls-markdown-description"
              >
                https://www.nhs.uk/example
              </code>
            </pre>
          </div>
        </details>
        <h2
          class="nhsuk-heading-m"
        >
          More about text messages
        </h2>
        <ul
          class="channel-guidance__list"
        >
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/pricing/text-messages"
              rel="noopener noreferrer"
              target="_blank"
            >
              Text message length and pricing (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/tell-recipients-who-your-messages-are-from"
              rel="noopener noreferrer"
              target="_blank"
            >
              Sender IDs (opens in a new tab)
            </a>
          </li>
          <li
            class="nhsuk-u-margin-bottom-3"
          >
            <a
              href="/using-nhs-notify/delivery-times"
              rel="noopener noreferrer"
              target="_blank"
            >
              Delivery times (opens in a new tab)
            </a>
          </li>
        </ul>
      </aside>
    </div>
  </main>
</DocumentFragment>
`;
